--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Portfolio | Sabbir</title>
 </head>
-<body>
+<body class="bg-[#1E1E1E]">
     <header>
-        <h1>Hello World</h1>
+        <!-- Nav Section -->
+        <section class="max-w-6xl mx-auto">
+            <div>
+                <h1 class="text-2xl font-semibold text-[#FD6F00]">Sabbir</h1>
+            </div>
+            <div></div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
