complete : nav Section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 <body class="bg-[#1E1E1E]">
     <header>
         <!-- Nav Section -->
-        <section class="max-w-6xl mx-auto">
+        <section class="max-w-6xl mx-auto flex justify-between items-center mt-16">
             <div>
-                <h1 class="text-2xl font-semibold text-[#FD6F00]">Sabbir</h1>
+                <h1 class="text-5xl font-semibold text-[#FD6F00]">Sabbir</h1>
             </div>
-            <div></div>
+            <div>
+                <ul class="flex text-white text-2xl gap-12  items-center">
+                    <li class="">Home</li>
+                    <li>About Me</li>
+                    <li>Projects</li>
+                    <li>Testimonials</li>
+                    <button class="bg-[#FD6F00] px-4 py-1">Download CV</button>
+                </ul>
+            </div>
         </section>
     </header>
     <main></main>
