--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Portfolio | Sabbir</title>
-</head>
-<body class="bg-[#1E1E1E]">
+  </head>
+  <body class="bg-[#1E1E1E]">
     <header>
-        <!-- Nav Section -->
-        <section class="max-w-6xl mx-auto flex justify-between items-center mt-16">
+      <!-- Nav Section -->
+      <section
+        class="max-w-6xl mx-auto flex justify-between items-center mt-16"
+      >
+        <div>
+          <h1 class="text-5xl font-semibold text-[#FD6F00]">Sabbir</h1>
+        </div>
+        <div>
+          <ul class="flex text-white text-2xl gap-12 items-center">
+            <li class="">Home</li>
+            <li>About Me</li>
+            <li>Projects</li>
+            <li>Testimonials</li>
+            <button class="bg-[#FD6F00] px-4 py-1">Download CV</button>
+          </ul>
+        </div>
+      </section>
+      <!-- Nav Section end -->
+
+      <!-- banner section start -->
+      <section>
+        <div>
+            <h1>
+                Hi, I'm Sabbir
+            </h1>
+            <h1>A Creative Designer Based In Dhaka</h1>
+            <p>I create beautiful and creative web applications in MERN stack Technology</p>
+            <h3>Design Development Webflow</h3>
+
             <div>
-                <h1 class="text-5xl font-semibold text-[#FD6F00]">Sabbir</h1>
+                <button>Portfolio</button>
+                <button>Hire Me</button>
             </div>
-            <div>
-                <ul class="flex text-white text-2xl gap-12  items-center">
-                    <li class="">Home</li>
-                    <li>About Me</li>
-                    <li>Projects</li>
-                    <li>Testimonials</li>
-                    <button class="bg-[#FD6F00] px-4 py-1">Download CV</button>
-                </ul>
-            </div>
-        </section>
+
+            <div></div>
+        </div>
+        <div></div>
+      </section>
+      <!-- banner section end -->
+
     </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
