--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Portfolio | Sabbir</title>
   </head>
-  <body class="bg-[#1E1E1E]">
+  <body class="bg-[#1E1E1E] text-white">
     <header>
       <!-- Nav Section -->
       <section
@@ -16,7 +16,7 @@
           <h1 class="text-5xl font-semibold text-[#FD6F00]">Sabbir</h1>
         </div>
         <div>
-          <ul class="flex text-white text-2xl gap-12 items-center">
+          <ul class="flex  text-2xl gap-12 items-center">
             <li class="">Home</li>
             <li>About Me</li>
             <li>Projects</li>
@@ -28,12 +28,12 @@
       <!-- Nav Section end -->
 
       <!-- banner section start -->
-      <section>
+      <section class="flex justify-between items-center mt-12 max-w-6xl mx-auto">
         <div>
-            <h1>
+            <h1 class="text-5xl font-bold uppercase">
                 Hi, I'm Sabbir
             </h1>
-            <h1>A Creative Designer Based In Dhaka</h1>
+            <h1 class="text-5xl font-bold uppercase">A Creative  Designer <br> Based In Dhaka</h1>
             <p>I create beautiful and creative web applications in MERN stack Technology</p>
             <h3>Design Development Webflow</h3>
 
@@ -41,10 +41,11 @@
                 <button>Portfolio</button>
                 <button>Hire Me</button>
             </div>
-
-            <div></div>
         </div>
-        <div></div>
+        <div>
+
+            <img class="w-[500px]" src="./assets/banner_image.png" alt="">
+        </div>
       </section>
       <!-- banner section end -->
 
