--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./Styles/style.css">
     <title>Portfolio | Sabbir</title>
   </head>
   <body class="bg-[#1E1E1E] text-white">
@@ -13,7 +14,7 @@
         class="max-w-6xl mx-auto flex justify-between items-center mt-16"
       >
         <div>
-          <h1 class="text-5xl font-semibold text-[#FD6F00]">Sabbir</h1>
+          <h1 class="text-4xl font-semibold text-[#FD6F00]">Sabbir</h1>
         </div>
         <div>
           <ul class="flex  text-2xl gap-12 items-center">
@@ -29,17 +30,25 @@
 
       <!-- banner section start -->
       <section class="flex justify-between items-center mt-12 max-w-6xl mx-auto">
-        <div>
-            <h1 class="text-5xl font-bold uppercase">
+        <div class="space-y-4">
+            <h1 class="text-4xl font-bold uppercase">
                 Hi, I'm Sabbir
             </h1>
-            <h1 class="text-5xl font-bold uppercase">A Creative  Designer <br> Based In Dhaka</h1>
-            <p>I create beautiful and creative web applications in MERN stack Technology</p>
-            <h3>Design Development Webflow</h3>
+            <div class="text-4xl font-bold uppercase">A Creative 
+              <img class="inline-block " src="./assets/sparkles.png" />
+              Designer <br> Based In <span class="text-[#FD6F00]">Dhaka</span> </div>
+            <p class="text-gray-300 max-w-[500px]">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
+            <div class="text-2xl">Design <img class="inline-block" src="./assets/sparkles.png" /> Development <img class="inline-block" src="./assets/sparkles.png" /> Webflow</div>
 
-            <div>
-                <button>Portfolio</button>
-                <button>Hire Me</button>
+            <div class="border rounded-full p-2 inline-block text-2xl">
+                <button class="py-2 px-4 rounded-full bg-[#FD6F00]">Portfolio</button>
+                <button class="ml-4 mr-2">Hire Me</button>
+            </div>
+            <div class="flex gap-4">
+              <img src="./assets/facebook.png" />
+              <img src="./assets/Instagram - Negative.png" />
+              <img src="./assets/twitter.png" />
+              <img src="./assets/linkedin.png" />
             </div>
         </div>
         <div>
