add : about section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="text-4xl font-bold uppercase">A Creative 
               <img class="inline-block " src="./assets/sparkles.png" />
               Designer <br> Based In <span class="text-[#FD6F00]">Dhaka</span> </div>
-            <p class="text-gray-300 max-w-[500px]">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
+            <p class="text-gray-400 max-w-[500px]">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
             <div class="text-2xl">Design <img class="inline-block" src="./assets/sparkles.png" /> Development <img class="inline-block" src="./assets/sparkles.png" /> Webflow</div>
 
             <div class="border rounded-full p-2 inline-block text-2xl">
@@ -59,7 +59,28 @@
       <!-- banner section end -->
 
     </header>
-    <main></main>
+    <main>
+      <!-- About me Start -->
+      <section class="max-w-6xl mx-auto flex items-center justify-between gap-6 mt-24">
+        <div class="space-y-4">
+          <h1 class="text-3xl font-bold">About Me</h1>
+          <p class="text-gray-400 max-w-xl">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
+        </div>
+        <div class="flex flex-col items-end space-y-2">
+          <div class="flex gap-2 items-center">
+            <img src="./assets/Star.png" />
+            <img src="./assets/Star.png" />
+            <img src="./assets/Star.png" />
+            <img src="./assets/Star.png" />
+            <img src="./assets/Star.png" />
+          </div>
+          <h1 class="text-3xl font-bold">10 Years</h1>
+          <p class="text-gray-300">Experience</p>
+
+        </div>
+      </section>
+      <!-- About me End -->
+    </main>
     <footer></footer>
   </body>
 </html>
