--- a/index.html
+++ b/index.html
@@ -123,8 +123,31 @@
       <!-- My Experience E -->
 
       <!-- Award Section S -->
-      <section>
-        
+      <section class="max-w-6xl mx-auto mt-24">
+        <div class="space-y-4 text-center">
+          <h1 class="text-3xl font-bold">Awards</h1>
+          <p class="text-gray-400 max-w-xl mx-auto">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
+        </div>
+
+        <div class="bg-black p-10 mt-12">
+          <div class="space-y-6">
+              <div class="flex justify-between text-3xl items-center">
+                <h2 class="">Best Mobile App Design (2023)</h2>
+                <p class="">Product Design 2024</p>
+              </div>
+              <p class="max-w-2xl text-gray-400">Awarded by [Name of Awarding Body] for my design of the "Fitness+ App". The app's intuitive interface and user-friendly features were praised for promoting a healthy lifestyle.</p>
+            </div>
+        </div>
+        <div class="bg-black p-10 mt-12">
+          <div class="space-y-6">
+              <div class="flex justify-between text-3xl items-center">
+                <h2 class="">UI/UX Design Competition</h2>
+                <p class="">Product Design 2023</p>
+              </div>
+              <p class="max-w-2xl text-gray-400">Awarded by [Name of Awarding Body] for my design of the "Fitness+ App". The app's intuitive interface and user-friendly features were praised for promoting a healthy lifestyle.</p>
+            </div>
+        </div>
+
       </section>
       <!-- Award Section E -->
 
