--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <!-- Award Section S -->
       <section class="max-w-6xl mx-auto mt-24">
         <div class="space-y-4 text-center">
-          <h1 class="text-3xl font-bold">Awards</h1>
+          <h1 class="text-3xl font-bold uppercase">Awards</h1>
           <p class="text-gray-400 max-w-xl mx-auto">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
         </div>
 
@@ -150,6 +150,54 @@
 
       </section>
       <!-- Award Section E -->
+
+      <!-- Portfolio Section S -->
+      <section class="max-w-6xl mx-auto mt-24">
+        <div class="space-y-4 text-center">
+          <h1 class="text-3xl font-bold">MY PORTFOLIO</h1>
+          <p class="text-gray-400 max-w-xl mx-auto">I create beautiful and creative web applications in MERN stack Technology. I am enthusiast about web performance and AI.</p>
+        </div>
+
+        <div class="mt-6 flex gap-6 justify-center items-center">
+          <button class="bg-black px-4 py-1">UI/UX</button>
+          <button class="bg-[#FD6F00] px-4 py-1">Web Design</button>
+          <button class="bg-black px-4 py-1">Graphics Design</button>
+          <button class="bg-black px-4 py-1">App Design</button>
+        </div>
+
+        <div class="flex justify-between mt-12">
+          <div>
+            <img class="" src="./assets/project.png" alt="">
+          </div>
+          <div>
+            <div class="space-y-4">
+              <p class="text-gray-200">UX Case Study</p>
+              <h1 class="text-4xl">Bally Website Research</h1>
+              <p class="max-w-2xl text-gray-400">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+              <p class="max-w-2xl text-gray-400">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+              <p class="max-w-2xl text-gray-400">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-between mt-12">
+          
+          <div>
+            <div class="space-y-4">
+              <p class="text-gray-200">UI Case Study</p>
+              <h1 class="text-4xl">Blood Donation Management</h1>
+              <p class="max-w-2xl text-gray-400">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+              <p class="max-w-2xl text-gray-400">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+              <p class="max-w-2xl text-gray-400">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+            </div>
+          </div>
+          <div>
+            <img class="" src="./assets/project.png" alt="">
+          </div>
+        </div>
+
+
+      </section>
+      <!-- Portfolio Section E -->
 
     </main>
     <footer></footer>
