--- a/index.html
+++ b/index.html
@@ -199,6 +199,41 @@
       </section>
       <!-- Portfolio Section E -->
 
+
+      <!-- Contact Section S -->
+      <section class="max-w-6xl mx-auto mt-24">
+          <div class="text-center space-y-4">
+            <p class="text-gray-200">Contact</p>
+            <h1 class="text-4xl uppercase">Reach Me Out</h1>
+          </div>
+
+          <div class="mt-12 p-12 bg-[#fd6e001b]">
+            <h1 class="text-4xl uppercase">Any Project?</h1>
+            <div class="flex justify-between gap-12 mt-6">
+              <div class="w-full">
+                <h3 class="text-xl">NAME</h3>
+                <hr class="mt-4">
+              </div>
+              <div class="w-full">
+                <h3 class="text-xl">EMAIL</h3>
+                <hr class="mt-4">
+              </div>
+            </div>
+            <div class="w-full mt-12">
+              <h3 class="text-xl">MESSAGE</h3>
+              <hr class="mt-6">
+              <div class="text-xl mt-6">
+                <img src="./assets/attach.png" class="inline-block mr-2" alt="">
+                 Attach File</div>
+            </div>
+
+
+            <button class="bg-[#FD6F00] px-6 text-xl mt-6 py-2">Submit Now</button>
+
+          </div>
+      </section>
+      <!-- Contact Section E -->
+
     </main>
     <footer></footer>
   </body>
