--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         class="max-w-6xl mx-auto flex justify-between items-center mt-16"
       >
         <div>
-          <h1 class="text-4xl font-semibold text-[#FD6F00]">Sabbir</h1>
+          <h1 class="text-4xl uppercase font-semibold text-[#FD6F00]">Sabbir</h1>
         </div>
         <div>
           <ul class="flex  text-2xl gap-12 items-center">
@@ -235,6 +235,26 @@
       <!-- Contact Section E -->
 
     </main>
-    <footer></footer>
+    <footer class="mt-12 bg-black pt-24" >
+      <h1 class="text-5xl font-bold text-center uppercase text-[#FD6F00]">Sabbir</h1>
+      <div class="mt-12 flex justify-center">
+        <ul class="flex  text-2xl gap-12 items-center">
+          <li class="">Home</li>
+          <li>About Me</li>
+          <li>Projects</li>
+          <li>Testimonials</li>
+          <li>Contact</li>
+          <li>Services</li>
+          
+        </ul>
+      </div>
+      <div class="flex gap-8 mt-12 justify-center">
+        <img src="./assets/facebook.png" />
+        <img src="./assets/Instagram - Negative.png" />
+        <img src="./assets/twitter.png" />
+        <img src="./assets/linkedin.png" />
+      </div>
+      <h1 class="text-center text-xl mt-12 py-6 bg-[#121212]">© 2023 <span class="text-[#FF6F00]">SABBIR</span> All Rights Reserved , Inc.</h1>
+    </footer>
   </body>
 </html>
